[gd_scene load_steps=7 format=3 uid="uid://bha6sqsx87kx"]

[ext_resource type="Script" path="res://interactable/interactable.gd" id="1_ndckh"]
[ext_resource type="Texture2D" uid="uid://bpkc1gf45xkya" path="res://whitecircle.png" id="1_x6xu1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_36t5r"]
radius = 82.52

[sub_resource type="Animation" id="Animation_ng46f"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IndicatorTransform/Sprite2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1.13, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IndicatorTransform/Sprite2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.895, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("IndicatorTransform/Sprite2D:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("IndicatorTransform/Sprite2D:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(9.725, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_l5pty"]
resource_name = "bounce"
length = 1.5
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IndicatorTransform/Sprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.1, 0, 0.1, 0, 0, -0.1, 0, 0.1, 0, 0, -0.1, 0, 0.1, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.4, 0.8)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IndicatorTransform/Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 2, 0),
"points": PackedFloat32Array(0, -0.1, 0, 0.1, 0, 9.725, -0.1, 0, 0.1, 0, -12.605, -0.1, 0, 0.1, 0, 0, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0, 0.2, 0.4, 0.8)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("IndicatorTransform/Sprite2D:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.1, 0, 0.1, 0, 1.13, -0.1, 0, 0.1, 0, 0.97, -0.1, 0, 0.1, 0, 1.04, -0.1, 0, 0.1, 0, 1, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("IndicatorTransform/Sprite2D:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.1, 0, 0.1, 0, 0.895, -0.1, 0, 0.1, 0, 1.135, -0.1, 0, 0.1, 0, 0.96, -0.1, 0, 0.1, 0, 1, -0.1, 0, 0.1, 0),
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nm7mn"]
_data = {
"RESET": SubResource("Animation_ng46f"),
"bounce": SubResource("Animation_l5pty")
}

[node name="Interactable" type="Node2D"]
script = ExtResource("1_ndckh")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_36t5r")

[node name="InteractIndicator" type="Node2D" parent="."]
position = Vector2(0, -184)

[node name="IndicatorTransform" type="Marker2D" parent="InteractIndicator"]
position = Vector2(0, 32)
scale = Vector2(0.3, 0.3)

[node name="Sprite2D" type="Sprite2D" parent="InteractIndicator/IndicatorTransform"]
position = Vector2(0, 9.725)
scale = Vector2(1.13, 0.895)
texture = ExtResource("1_x6xu1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="InteractIndicator"]
libraries = {
"": SubResource("AnimationLibrary_nm7mn")
}
autoplay = "bounce"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
